--- a/less/mixins.less
+++ b/less/mixins.less
@@ -15,10 +15,9 @@
 
 */
 
-@laptop: ~"(max-width: 1100px)";
-@tablet: ~"(max-width: 768px)";
-@phone: ~"(max-width: 400px)";
-
+@phone: ~"(min-width: 400px)";
+@tablet: ~"(min-width: 768px)";
+@laptop: ~"(min-width: 1100px)";
 
 //Got my colors from http://chir.ag/projects/name-that-color/
 //colors
